find_program(LLVM_BIN llvm-ar HINTS ENV PATH)
if(LLVM_BIN)
get_filename_component(LLVM_BIN_DIR ${LLVM_BIN} DIRECTORY)
message(STATUS "Found LLVM ${LLVM_BIN_DIR}")
if (NOT INNO_PLATFORM_MAC)
add_executable(Reflector Reflector.cpp)
set_target_properties(Reflector PROPERTIES FOLDER Tool)
target_link_libraries(Reflector Core)
target_include_directories(Reflector PRIVATE "${INNO_SUBMODULE_DIRECTORIES}/json/include")
target_include_directories(Reflector PRIVATE ${LLVM_BIN_DIR}/../include)
target_link_libraries(Reflector ${LLVM_BIN_DIR}/../lib/libclang.lib)
if (INNO_PLATFORM_WIN)
if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
  set_target_properties(Reflector PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
endif (INNO_PLATFORM_WIN)
if (INNO_PLATFORM_LINUX)
target_link_libraries(Reflector -lX11 -lXrandr -lXinerama -lXi -lXxf86vm -lXcursor -ldl -lm -lpthread -lstdc++fs)
endif (INNO_PLATFORM_LINUX)
endif (NOT INNO_PLATFORM_MAC)
# Add LLVM bin folder to system path
list(APPEND CMAKE_SYSTEM_PATH ${LLVM_BIN_DIR})
endif()
