file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp" "*.mm" "*.m")
add_executable(InnoMain ${HEADERS} ${SOURCES})
set_target_properties(InnoMain PROPERTIES MACOSX_BUNDLE ON)
set_target_properties(InnoMain PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME ${CMAKE_PROJECT_NAME})
set_target_properties(InnoMain PROPERTIES FOLDER Engine/ApplicationEntry)
target_link_libraries(InnoMain InnoApplicationEntry)
find_library(METAL Metal)
find_library(METALKIT MetalKit)
target_link_libraries(InnoMain ${METAL})
target_link_libraries(InnoMain ${METALKIT})