file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp" "*.mm" "*.m")
add_executable(Main ${HEADERS} ${SOURCES})
set_target_properties(Main PROPERTIES MACOSX_BUNDLE ON)
set_target_properties(Main PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME ${CMAKE_PROJECT_NAME})
set_target_properties(Main PROPERTIES FOLDER Engine/ApplicationEntry)
target_link_libraries(Main ApplicationEntry)
find_library(METAL Metal)
find_library(METALKIT MetalKit)
target_link_libraries(Main ${METAL})
target_link_libraries(Main ${METALKIT})