add_subdirectory("DXWindowSurface")
add_subdirectory("GLWindowSurface")
if (VULKAN)
add_subdirectory("VKWindowSurface")
endif (VULKAN)

file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp")
add_library(InnoWinWindowSystem ${HEADERS} ${SOURCES})

target_link_libraries(InnoWinWindowSystem InnoWinDXWindowSurface)
target_link_libraries(InnoWinWindowSystem InnoWinGLWindowSurface)
if (VULKAN)
target_link_libraries(InnoWinWindowSystem InnoWinVKWindowSurface)
endif (VULKAN)