file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp")
add_library(DX12RenderingServer ${HEADERS} ${SOURCES})
set_target_properties(DX12RenderingServer PROPERTIES FOLDER Engine/RenderingServer)
target_include_directories(DX12RenderingServer PUBLIC "${INNO_GITSUBMODULE_DIRECTORIES}/DirectX-Headers/include")

find_library(D3D12_LIB d3d12)
find_library(DXGI_LIB dxgi)
find_library(D3DCOMPILER_LIB d3dcompiler)
find_library(DXGUID_LIB dxguid)

if (D3D12_LIB AND DXGI_LIB AND D3DCOMPILER_LIB AND DXGUID_LIB)
    message(STATUS "Found DirectX libraries")
    target_link_libraries(DX12RenderingServer PRIVATE ${D3D12_LIB} ${DXGI_LIB} ${D3DCOMPILER_LIB} ${DXGUID_LIB})
else()
    message(FATAL_ERROR "Failed to find DirectX libraries")
endif()
