file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp")
add_library(InnoGLRenderingServer ${HEADERS} ${SOURCES})
set_property(TARGET InnoGLRenderingServer PROPERTY POSITION_INDEPENDENT_CODE ON)
set_target_properties(InnoGLRenderingServer PROPERTIES FOLDER Engine/RenderingServer)
target_include_directories(InnoGLRenderingServer PRIVATE "${INNO_INCLUDE_DIRECTORIES}/GL")
target_include_directories(InnoGLRenderingServer PRIVATE "${CMAKE_BINARY_DIR}/Engine/ThirdParty/GLAD/gladsources/${GL_HEADER_LIB_NAME}/include")
target_link_libraries(InnoGLRenderingServer ${OPENGL_LIBRARIES})
target_link_libraries(InnoGLRenderingServer "${GL_HEADER_LIB_NAME}")