file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp")
add_library(GLRenderingServer ${HEADERS} ${SOURCES})
set_property(TARGET GLRenderingServer PROPERTY POSITION_INDEPENDENT_CODE ON)
set_target_properties(GLRenderingServer PROPERTIES FOLDER Engine/RenderingServer)
target_include_directories(GLRenderingServer PRIVATE "${INNO_INCLUDE_DIRECTORIES}/GL")
target_include_directories(GLRenderingServer PRIVATE "${CMAKE_BINARY_DIR}/Engine/ThirdParty/GLAD/gladsources/${GL_HEADER_LIB_NAME}/include")
target_link_libraries(GLRenderingServer ${OPENGL_LIBRARIES})
target_link_libraries(GLRenderingServer "${GL_HEADER_LIB_NAME}")